--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <i class="fas fa-code fa-5x white"></i>
             <h2>FirstName LastName</h2>
             <p>City,Country.</p>
-            <p>Made by Talo (alphaotuken)</p>
+            <p>Made by Talo (talobyte)</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
